[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TAP"
version = "0.0.1"
authors = [
  { name="Federica Persiani" },
  { name="Damiano Malori" }
]
description = "Python package to make statistical test and add statistical annotations on plots generated with Plotly"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FedericaPersiani/tap"
Issues = "https://github.com/FedericaPersiani/tap/issues"