[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taplib"
version = "0.1.3"
authors = [
  { name="Federica Persiani" },
  { name="Damiano Malori" }
]
description = "Python package to make statistical test and add statistical annotations on plots generated with Plotly"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "statsmodels>=0.13.5",
    "scipy>=1.10.0",
    "plotly>=5.15.0",
    "nbformat>=4.2.0",
    "kaleido==0.1.0.post1 ; platform_system == 'Windows'",
    "kaleido>=0.1.0 ; platform_system != 'Windows'",
]

[project.urls]
Homepage = "https://github.com/Discovery-Circle/tap"
Issues = "https://github.com/Discovery-Circle/tap/issues"
